--- a/style/style.scss
+++ b/style/style.scss
@@ -100,12 +100,15 @@ a {
 
 @media (max-width: 768px) {
     body {
-        text-align: center;
         display: flex;
         align-items: center;
     }
 
     .code-snippet {
         width: 5in;
+    }
+
+    textarea {
+        width: 4.55in;
     }
 }
