--- a/style/style.scss
+++ b/style/style.scss
@@ -54,7 +54,10 @@ select {
 }
 
 .result {
-    margin-top: 20px;
+    margin: 20px 30px 0 30px;
+    line-height: 40px;
+    font-size: 20px;
+    margin-inline: 50px;
 }
 
 .code-snippet {
